--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pschart",
+  "name": "seed3",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -14,8 +14,11 @@
   "devDependencies": {
     "browserify": "9.0.4",
     "chalk": "^0.5.1",
+    "concat": "^1.0.0",
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
     "gulp-notify": "^2.2.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "jquery": "^2.1.4",
     "juicer": "^0.6.8-stable",
